# Advent-of-Code-solutions

./: .gitignore  README.md  benchmark.sh  inputGetter.py
2015/: 1.ipynb  10.ipynb  10.py  12.ipynb  13.ipynb  17.ipynb  18.ipynb  2.ipynb  23.ipynb  4.ipynb  6.ipynb  9.ipynb
2016/: 1.ipynb  2.ipynb  4.ipynb  5.ipynb
2017/: 11.ipynb  12.ipynb  13.ipynb  14.ipynb  2.ipynb  5.ipynb  6.ipynb  7.ipynb
2021/: 9a.py  9b.py
2022/: 1.ipynb  1.py  10.py  10a.py  11a.py  12.ipynb  12.py  12a.py  12b.py  13.ipynb  13.py  14.ipynb  14a.py  14b.py  15.ipynb  15a.py  15b.py  17.ipynb  17a.py  18a.py  18b.py  19a.py  1a.cpp  1b.cpp  2.py  20a.py  21a.py  21b.py  22a.py  22b.py  23a.py  23b.py  25a.py  2a.cpp  2b.cpp  3.ipynb  3.py  3a.cpp  3b.cpp  4.py  (+20 more)
2023/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18a.py  1a.py  1b.py  2.py  20.py  20a.py  21.ipynb  21a.py  22.py  23b.py  24a.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  README.md
2024/: 1.ipynb  12.ipynb  14.ipynb  15.ipynb  16.ipynb  18.ipynb  19.ipynb  2.ipynb  20.ipynb  22.ipynb  23.ipynb  25.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  7.ipynb  8.ipynb  9.ipynb
python/: 2015-01.py  2015-02.py  2015-03.py  2015-04.py  2015-05.py  2015-06.py  2015-07.py  2025-01.py  2025-02.py  2025-03.py  2025-04.py  (+2 more)
rust/: Cargo.toml  benchmark.sh
rust/benchmark-output/: 2015-01.md  2015-02.md  2015-03.md  2015-04.md  2015-05.md  2015-06.md  2015-07.md  2015-08.md  2015-09.md  2015-10.md  2015-12.md  2015-13.md  2015-14.md  2015-17.md  2015-23.md  2016-01.md  2016-02.md  2016-03.md
rust/src/: lib.rs
(+80 files in other folders)
