[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.5.5"
itertools = "0.14.0"
md5 = "0.7.0"
rayon = "1.10.0"
reqwest = {version = "0.12.12", features = ["blocking", "cookies"]}
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.137"

[lib]
name = "my_project"
path = "src/lib.rs"